--- a/src/components/food.css
+++ b/src/components/food.css
@@ -32,6 +32,7 @@ img {
   border-radius: 2rem;
   font-weight: var(--font-semi-bold);
   cursor: pointer;
+  background-color: white;
 }
 
 .cart-pic {
